# RP2040-HOTAS

./: .gitignore  .gitmodules  CMakeLists.txt  FreeRTOSConfig.h  FreeRTOSConfig.h.bak  Makefile  README.md  WIFI_CR  default.nix  descriptor_test  desktop-descriptor.c  flake.nix  patch-SDFS.py  platformio copy.ini  platformio.ini
.github/workflows/: build.yml
SD/: ajax-test.css  ajax-test.html  index.html  index.js  pinout-wip.html  pinout.html  settings.html  settings.js  style.css
SD/config/: settings.ini
SD/edit/: index.css  index.html
SD/pinout/: pinout.css  pinout.html  pinout.js  register_serviceworker.js
SD/settings/: settings.html  settings.js
config/: common.ini  debug.ini  i2c_node.ini  usb.ini
include/: Arduino-wrapper.h  Commands.h  Common.h  HID_Report.h  HID_Report.hpp  HID_descriptor.h  HID_descriptors.hpp  HID_rep.hpp  LED_common.h  MFD_common.hpp  USB protocol.txt  axis.hpp  btn_axis.hpp  buttons.hpp  hid.h  hid.hpp  hid_Report_Callback.h  hid_device.h  hid_minimal.h  hid_minimal_report.h  picow_only.h  tusb_config_rp2040.h  webInterface.h
lib/DynamicArray/src/: DynamicArray.h
lib/IniConfig/: IniConfig.cpp  IniConfig.h
lib/SDFS/: library.properties
lib/SDFS/src/: SDFS.h
lib/X52-HOTAS/examples/X52-Pro/Fake-X52-Pro-Throttle/: Fake-X52-Pro-Throttle.ino
lib/X52-HOTAS/src/: new_x52_common.h  new_x52_pro.cpp  new_x52_pro.h  new_x52_std.cpp  new_x52_std.h  new_x52_util.h  throttle-protocol.pio  throttle-protocol.pio.h  x52_common.h  x52_pro.h  x52_util.h
lib/sd_card/: CMakeLists.txt
lib/sd_card/src/FS/: FS.cpp  FS.h  FSImpl.h
lib/sd_card/src/SD/: SD.h
lib/sd_card/src/SDFS/: SDFS.cpp  SDFS.h
lib/usb/: CMakeLists.txt
lib/usb/src/: usbd_cdc.cpp  usbd_cdc.h  usbd_device.cpp  usbd_device.h  usbd_hid.cpp  usbd_hid.h  usbd_interface.cpp  usbd_interface.h  usbd_msc.cpp  usbd_msc.h  usbd_mtp.cpp  usbd_mtp.h
patches/: SDFS.patch  SDFS.py
python/: config.cfg  requirements.txt
python/app/: init.py
python/app/ui/: main_window.py
python/app/ui/actions/: actions.py
python/app/ui/widgets/: devicelist.py  dialog.py  menubar.py  settings.py  statusbar.py  toolbar.py  treeview.py
python/app/utils/: config.py  filemonitor.py  filewatcher.py  logging.py  monitor.py  usb.py  utils.py
python/app/utils/monitor/: cargo.py  journal.py  market.py  modulesinfo.py  navroute.py  outfitting.py  shipyard.py  status.py
scripts/: picoasm.py
src/: i2c_node.cpp  i2c_node.cpp.bak  joystick_main.cpp  main.cpp  main.h  tusb_config.h  usb_descriptors.cpp  usb_descriptors.h
